# Elysia_book

./: .cproject  .project  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/: .cproject  .project  CMakeLists.txt
components/audio/: audio.cpp  audio.h
components/book/: book_config.c  book_config.h
components/book_init/: book_init.c  book_init.h
components/disk/: disk.c  disk.h
components/display_driver/lvgl_tft/: st7789.h
components/peripheral/: peripheral.cpp  peripheral.h
main/: CMakeLists.txt  idf_component.yml  main.c  main.cpp
